--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+
+    <button class="selection" id="rock">Rock</button>
+    <button class="selection" id="paper">Paper</button>
+    <button class="selection" id="scissors">Scissors</button>
     
 </body>
 </html>
