--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <button class="selection" id="rock">Rock</button>
     <button class="selection" id="paper">Paper</button>
     <button class="selection" id="scissors">Scissors</button>
+
+    <div id="results"></div>
     
 </body>
 </html>
