Add score, change game code

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-
-    <button class="selection" id="rock">Rock</button>
-    <button class="selection" id="paper">Paper</button>
-    <button class="selection" id="scissors">Scissors</button>
+    <div id="scores">
+        <div id="playerScore">Score: 0</div>
+        <div id="computerScore">Score: 0</div>
+    </div>
+    <div id="gameButtons">
+        <button class="selection" id="rock">Rock</button>
+        <button class="selection" id="paper">Paper</button>
+        <button class="selection" id="scissors">Scissors</button>
+    </div>
 
     <div id="results"></div>
     
