Add Winning scenario, reset button

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="scores">
-        <div id="playerScore">Score: 0</div>
-        <div id="computerScore">Score: 0</div>
+        <div id="player">Score: 0</div>
+        <div id="computer">Score: 0</div>
     </div>
     <div id="gameButtons">
         <button class="selection" id="rock">Rock</button>
@@ -19,6 +19,11 @@
     </div>
 
     <div id="results"></div>
+
+    <div id="winnerScreen">
+        <div id="winnerText"></div>
+        <button id="playAgain">Play Again</button>
+    </div>
     
 </body>
 </html>
